--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
         <input type="submit" value="Enviar">
-        <input type="hidden" name="_next" value="index.html">
+        <input type="hidden" name="_next" value="https://regina1666.github.io/web/">
                        <input type="hidden" name="_captcha" value="false">
     </form>
 </div>
