--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
         <input type="submit" value="Enviar">
+
+        <input type="hidden" name="_next" value="https://regina1666.github.io/web/">
+        <input type="hidden" name="_captcha" value="false">
     </form>
 </div>
 
